--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button><span class="material-symbols-outlined footer-icon btn-pad open-modal-btn" data-target="#modal4">shopping_cart</span></button>
         <button><span class="material-symbols-outlined admin-panel footer-icon btn-pad" id="toggleButton">account_circle</span></button>
         <div id="buttonsContainer">
-          <button>Login or Register</button>
+          <button class="open-modal-btn" data-target="#modal1">Login or Register</button>
           <button>Language: English</button>
           <button>Support</button>
       </div>
