--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
 <div id="modalBackdrop" class="modal-backdrop"></div>
 <!-- Login Panel Modal -->
 
-<div id="modal1" class="modal HomeModal modal2">
+<div id="modal1" class="modal modal3">
   <div class="modal-content">
     <h2>Admin Panel Modal</h2>
     <button class="close-modal-btn">Close</button>
@@ -57,7 +57,7 @@
 
 <!-- Register Panel Modal  -->
 
-<div id="modal2" class="modal HomeModal modal2">
+<div id="modal2" class="modal modal3">
   <div class="modal-content">
     <h2>Admin Panel Modal</h2>
     <button class="close-modal-btn">Close</button>
