--- a/home.html
+++ b/home.html
@@ -4,13 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Ne Zbritje Home</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+  <!-- Google Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
 
   <div class="slider-container">
-    <img src="/images/1.jpeg" alt="">
-    <img src="/images/2.jpeg" alt="">
-    <img src="/images/3.jpeg" alt="">
+    <img src="/images/1.jpeg" alt="background Images">
+    <img src="/images/2.jpeg" alt="background Images">
+    <img src="/images/3.jpeg" alt="background Images">
   </div>
 
   <div class="reg-btn-container">
@@ -50,7 +58,7 @@
 <div id="modal1" class="modal modal3">
   <div class="modal-content">
     <h2>Admin Panel Modal</h2>
-    <button class="close-modal-btn">Close</button>
+    <button class="close-modal-btn"><span class="material-symbols-outlined">close</span></button>
   </div>
 </div>
 <!-- End of Login Panel Modal Styling  -->
@@ -60,7 +68,7 @@
 <div id="modal2" class="modal modal3">
   <div class="modal-content">
     <h2>Admin Panel Modal</h2>
-    <button class="close-modal-btn">Close</button>
+    <button class="close-modal-btn"><span class="material-symbols-outlined">close</span></button>
   </div>
 </div>
 <!-- End of Register Panel Modal Styling  -->
