--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     <!--  Header  -->
 
     <header>
-      <button><span class="material-symbols-outlined footer-icon btn-pad open-modal-btn" data-target="#modal6">notifications</span></button>
+      <div class="flex-alg-center">
+        <a href="home.html" target="_blank"><span class="material-symbols-outlined footer-icon btn-pad">home</span></a>
+        <button><span class="material-symbols-outlined footer-icon btn-pad open-modal-btn" data-target="#modal6">notifications</span></button>
+      </div>
       <span style="color: #fff;">Ne Zbritje!</span>
       <div class="flex-alg-center">
         <button><span class="material-symbols-outlined footer-icon btn-pad open-modal-btn" data-target="#modal4">shopping_cart</span></button>
