--- a/home.html
+++ b/home.html
@@ -56,9 +56,12 @@
 <!-- Login Panel Modal -->
 
 <div id="modal1" class="modal modal3">
-  <div class="modal-content">
-    <h2>Admin Panel Modal</h2>
-    <button class="close-modal-btn"><span class="material-symbols-outlined">close</span></button>
+  <div class="title-close-btn">
+    <span style="width: 100%;text-align: center;">Login Panel</span>
+    <span class="material-symbols-outlined close-modal-btn">close</span>
+  </div>
+  <div class="modal-content-admin">
+    
   </div>
 </div>
 <!-- End of Login Panel Modal Styling  -->
@@ -66,8 +69,8 @@
 <!-- Register Panel Modal  -->
 
 <div id="modal2" class="modal modal3">
-  <div class="modal-content">
-    <h2>Admin Panel Modal</h2>
+  <div class="modal-content-admin">
+
     <button class="close-modal-btn"><span class="material-symbols-outlined">close</span></button>
   </div>
 </div>
