--- a/home.html
+++ b/home.html
@@ -57,8 +57,10 @@
 
 <div id="modal1" class="modal modal3">
   <div class="title-close-btn">
-    <span style="width: 100%;text-align: center;">Login Panel</span>
-    <span class="material-symbols-outlined close-modal-btn">close</span>
+    <span class="mod-title">Login Panel</span>
+    <div class="close-modal-btn">
+      <span class="material-symbols-outlined">close</span>
+    </div>
   </div>
   <div class="modal-content-admin">
     
@@ -69,15 +71,17 @@
 <!-- Register Panel Modal  -->
 
 <div id="modal2" class="modal modal3">
+  <div class="title-close-btn">
+    <span class="mod-title">Login Panel</span>
+    <div class="close-modal-btn">
+      <span class="material-symbols-outlined">close</span>
+    </div>
+  </div>
   <div class="modal-content-admin">
-
-    <button class="close-modal-btn"><span class="material-symbols-outlined">close</span></button>
+    
   </div>
 </div>
 <!-- End of Register Panel Modal Styling  -->
-
-
-
 
 <!-- Modal Open and Closing Script with Transition -->
 <script>
