--- a/home.html
+++ b/home.html
@@ -27,10 +27,9 @@
       <button class="open-modal-btn" data-target="#modal1">Regjistrohu</button>
       <div class="reg-text-log">
         <span>Nese keni logari ju lutem klikoni ketu</span>
-        <span class="open-modal-btn" data-target="#modal2" style="color: red;text-decoration: underline;">Kyqu</span>
+        <span class="open-modal-btn" data-target="#modal2" style="color: #C6435D;">Kyqu</span>
       </div>
     </div>
-
   </div>
 
 
@@ -63,7 +62,30 @@
     </div>
   </div>
   <div class="modal-content-admin">
-    
+    <form class="form">
+        <div class="input-group">
+          <label for="username">Username</label>
+          <input type="text" id="username" name="username" required>
+        </div>
+        <div class="input-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" required>
+        </div>
+        <div class="forgot">
+          <a href="#">Forgot Password ?</a>
+        </div>
+      </div>
+      <div style="margin: 0 auto;padding: 15px 0px;">
+        <button class="signBtn" type="submit">Sign in</button>
+      </div>
+      <div class="privacy-container">
+        <label class="checkbox-container">
+          <input type="checkbox" id="agree-checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <p>By using this website, you agree to our <a href="/privacy-policy">Privacy Policy</a>.</p>
+      </div>
+    </form>
   </div>
 </div>
 <!-- End of Login Panel Modal Styling  -->
