--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
 
 <div id="modal1" class="modal modal3">
   <div class="title-close-btn">
-    <span class="mod-title">Login Panel</span>
+    <span class="mod-title">Kyqu</span>
     <div class="close-modal-btn">
       <span class="material-symbols-outlined">close</span>
     </div>
@@ -89,7 +89,7 @@
 
 <div id="modal2" class="modal modal3">
   <div class="title-close-btn">
-    <span class="mod-title">Login Panel</span>
+    <span class="mod-title">Regjistrohu</span>
     <div class="close-modal-btn">
       <span class="material-symbols-outlined">close</span>
     </div>
