--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
     <!--  Header  -->
 
     <header>
-      <div class="flex-alg-center">
-        <a href="home.html" target="_blank"><span class="material-symbols-outlined footer-icon btn-pad">home</span></a>
-        <button><span class="material-symbols-outlined footer-icon btn-pad open-modal-btn" data-target="#modal6">notifications</span></button>
-      </div>
+      <button><span class="material-symbols-outlined footer-icon btn-pad open-modal-btn" data-target="#modal6">notifications</span></button>
       <span style="color: #fff;">Ne Zbritje!</span>
       <div class="flex-alg-center">
+        <span class="material-symbols-outlined admin-panel footer-icon btn-pad">add</span>
         <button><span class="material-symbols-outlined footer-icon btn-pad open-modal-btn" data-target="#modal4">shopping_cart</span></button>
         <button><span class="material-symbols-outlined admin-panel footer-icon btn-pad" id="toggleButton">account_circle</span></button>
         <div id="buttonsContainer">
