--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
               <div class="discount-label">-14%</div>
               <!-- Admin Edit Button -->
               <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
+                <button class="admin-panel deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
+                <button class="admin-panel editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
               </div>
               <!-- End -->
             </div>
