--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!--  Header  -->
 
-    <header>
+    <header class="indexHeader">
       <div class="logoBox user-panel">
         <span style="color: white;">Ne Zbritje</span>
       </div>
