--- a/cart.html
+++ b/cart.html
@@ -35,8 +35,13 @@
 
   <header>
     <div class="flex-alg-center cartHeader">
-      <div class="search-container">
-        <input type="search" placeholder="Search Here...">
+      <div class="flex-alg-center">
+        <a href="/index.html">
+          <button class="bckCartbtn">
+            <span class="material-symbols-outlined admin-panel footer-icon">arrow_back</span>
+            <span>Continue Shopping</span>
+          </button>
+        </a>
       </div>
       <div class="flex-alg-center">
         <a href = "/cart.html"><button><span class="material-symbols-outlined footer-icon btn-pad">shopping_cart</span></button></a>
@@ -48,16 +53,12 @@
         <button class="open-modal-btn" data-target="#modal11">Logout</button>
       </div>
     </div>
-  <div class="bckHeader flex-alg-center">
-    <a href="/index.html">
-      <button class="bckCartbtn">
-        <span class="material-symbols-outlined admin-panel footer-icon">arrow_back</span>
-        <span>Continue Shopping</span>
-      </button>
-    </a>
-  </div>
   
   </header>
+
+  <section>
+    
+  </section>
 
 
 
