--- a/cart.html
+++ b/cart.html
@@ -56,6 +56,41 @@
   
   </header>
 
+  <section class="cartProducts">
+    <table>
+
+      <tbody>
+        <tr>
+          <td class="prductimgBox">
+            <img src="/assets/img/olive-oil.jpg" alt="Vaj Ulliri Ferrera">
+          </td>
+        </tr>
+        <tr>
+          <td>Vaj Ulliri Ferrera</td>
+          <td>nga Italia</td>
+          <td>
+            15 Euro
+          </td>
+        </tr>
+      </tbody>
+
+    </table>
+
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
